# reviewpilot-ai

./: README.md  docker-compose.yml
.github/workflows/: vercel-deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: extraction_agent.py  screening_agent.py
backend/app/api/v1/: projects.py  references.py
backend/app/core/: config.py  database.py
backend/app/models/: models.py
backend/app/services/: deduplication.py  import_parser.py
backend/tests/: test_backend.py
frontend/: package.json  tailwind.config.js  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useWebR.ts
r-sandbox/: Dockerfile  server.R
