[tool.poetry]
name = "reviewpilot-backend"
version = "0.1.0"
description = "FastAPI backend for ReviewPilot AI systematic review copilot"
authors = ["ReviewPilot Dev Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
pgvector = "^0.2.5"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
celery = "^5.3.6"
redis = "^5.0.3"
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
langgraph = "^0.0.26"
langchain = "^0.1.12"
langchain-openai = "^0.1.0"
numpy = "^1.26.4"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
ruff = "^0.3.3"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
